--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing-Page</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <div class = "top">
        <div class ="header"> 
           Header Logo
-           <ul>
+           <ul class="text">
               <li>Header Link 1</li>
               <li>Header Link 2</li>
               <li>Header Link 3</li>
@@ -18,7 +19,7 @@
 
         <div class = "title">
             This website is awesome
-            <p>This website has some smaller subtext that goes under the main title. 
+            <p class="text">This website has some smaller subtext that goes under the main title. 
                 It's a smaller font and the color is lower contrast
             </p>
             <button>Sign up</button>
