Format top hero section of page
Add 200px padding to top container to leave sides blank

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         </div>
 
         <div class = "title">
+            <div class = "title-container">
             This website is awesome
-            <p class="text">This website has some smaller subtext that goes under the main title. 
-                It's a smaller font and the color is lower contrast
-            </p>
-            <button>Sign up</button>
-            <img src = "./img/damon.jpeg" alt = "This is a picture of Damon hugging a cow">
+              <p class="text">This website has some smaller subtext that goes under the main title. 
+                 It's a smaller font and the color is lower contrast
+             </p>
+             <button>Sign up</button>
+            </div>
+            <img src = "./img/damon.jpeg" alt = "This is a picture of Damon hugging a cow" class="hero-img">
         </div>
     </div>
 
