--- a/index.html
+++ b/index.html
@@ -29,23 +29,35 @@
         </div>
     </div>
 
-    <div class = "middle-info">
+    <div class = "middle">
         Some random information.
-        <div class="image-container">
-            <img src = "./img/placeholder.jpeg" alt = "This is a placeholder" class = "info-img">
-            this is some subtext under an image
-            <img src = "./img/placeholder.jpeg" alt = "This is a placeholder" class = "info-img">
-            this is some subtext under an image
-            <img src = "./img/placeholder.jpeg" alt = "This is a placeholder" class = "info-img">
-            this is some subtext under an image
-            <img src = "./img/placeholder.jpeg" alt = "This is a placeholder" class = "info-img">
-            this is some subtext under an image
+        <div class="middle-container">
+            <div class = "img-container">
+                <img src = "./img/placeholder.png" alt = "This is a placeholder" class = "info-img">
+                this is some subtext under an image
+            </div>
+            <div class = "img-container">
+                <img src = "./img/placeholder.png" alt = "This is a placeholder" class = "info-img">
+                this is some subtext under an image
+            </div>
+            <div class = "img-container">
+                <img src = "./img/placeholder.png" alt = "This is a placeholder" class = "info-img">
+             this is some subtext under an image
+            </div>
+            <div class = "img-container">
+                <img src = "./img/placeholder.png" alt = "This is a placeholder" class = "info-img">
+                 this is some subtext under an image
+            </div>
         </div>
     </div>
 
     <div class = "quote-container">
-        This is an inspiring quote.
-        -Damon
+        <div class = "quote">
+            This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually
+            read it. Who knows? All I know is that it looks nice.
+             <p class = "quote-credit"> - Your mom</p>
+         </div>
     </div>
 
     <div class = "call-to-action"> 
